Bug 170302 - crash after changing identity for a folder and replying
Summary: crash after changing identity for a folder and replying
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-03 10:09 UTC by S. Burmeister
Modified: 2008-09-04 15:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2008-09-03 10:09:36 UTC
Version:            (using KDE 4.1.0)
OS:                Linux
Installed from:    SuSE RPMs

Select a folder (left-click), right-click on the folder and pick "properties", untick the "use default identity", pick another identity, accept changes. click on the reply button in the toolbar --> crash.

For me this is reproduceable, if you can't I'll try to supply a useful backtrace.
Comment 1 Thomas McGuire 2008-09-04 15:58:29 UTC
Fixed recently.