Don't crash when replying after changing folder settings.

This was caused by a dangling KMsgBase* in MessageActions.

Now, when a folder is closed (for example by the folder dialog),
emit the selectionChanged() signal to make sure everyone can udpate
their idea about the current selected message.

BUG: 170302

svn path=/trunk/KDE/kdepim/; revision=856781